init refresh token endpoint

--- a/GakkoBackend/GakkoBackend/appsettings.json
+++ b/GakkoBackend/GakkoBackend/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
+  "ConnectionStrings": {
+    "GakkoBackendDB": "Data Source=localhost\\SQLExpress;Initial Catalog=PRO_StudentApp;Integrated Security=True"
+  },
   "AllowedHosts": "*"
 }
