--- a/GakkoBackend/GakkoBackend.Application/GakkoBackend.Application.csproj
+++ b/GakkoBackend/GakkoBackend.Application/GakkoBackend.Application.csproj
@@ -1,30 +1,23 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="MediatR" Version="8.0.2" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="8.0.1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="3.1.6" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.1.6" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.6">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.7.1" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GakkoBackend.Application\GakkoBackend.Application.csproj" />
+    <ProjectReference Include="..\GakkoBackend.Domain\GakkoBackend.Domain.csproj" />
     <ProjectReference Include="..\GakkoBackend.Persistence\GakkoBackend.Persistence.csproj" />
+    <ProjectReference Include="..\GakkoBackend.Shared\GakkoBackend.Shared.csproj" />
   </ItemGroup>
-
 
 </Project>
