--- a/GakkoBackend/GakkoBackend.Domain/GakkoBackend.Domain.csproj
+++ b/GakkoBackend/GakkoBackend.Domain/GakkoBackend.Domain.csproj
@@ -1,11 +1,11 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <Folder Include="Extensions\" />
+    <Folder Include="Exceptions\" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,13 +18,6 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\GakkoBackend.Application\GakkoBackend.Application.csproj" />
-    <ProjectReference Include="..\GakkoBackend.Persistence\GakkoBackend.Persistence.csproj" />
-  </ItemGroup>
-
 
 </Project>
