--- a/GakkoBackend/GakkoBackend.Persistence/GakkoBackend.Persistence.csproj
+++ b/GakkoBackend/GakkoBackend.Persistence/GakkoBackend.Persistence.csproj
@@ -1,12 +1,8 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
-
-  <ItemGroup>
-    <Folder Include="Extensions\" />
-  </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediatR" Version="8.0.2" />
@@ -18,13 +14,14 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="3.1.3" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\GakkoBackend.Application\GakkoBackend.Application.csproj" />
-    <ProjectReference Include="..\GakkoBackend.Persistence\GakkoBackend.Persistence.csproj" />
+    <ProjectReference Include="..\GakkoBackend.Domain\GakkoBackend.Domain.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Configurations\" />
+  </ItemGroup>
 
 </Project>
