Changed the Employee model constraints

--- a/GakkoBackend/GakkoBackend.API/appsettings.json
+++ b/GakkoBackend/GakkoBackend.API/appsettings.json
@@ -7,7 +7,7 @@
     }
   },
   "ConnectionStrings": {
-    "GakkoBackendDB": "Data Source=.\\SQLExpress;Initial Catalog=GakkoBackend;Integrated Security=True"
+    "GakkoBackendDB": "Data Source=localhost;Initial Catalog=GakkoBackend;User ID=sa;Password=x@4K|9Ro"
   },
   "AllowedHosts": "*"
 }
